--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,6 +2,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.para {
+  font-size: 22px;
+}
+
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
@@ -13,15 +17,15 @@ body {
   font-weight: 800;
 }
 
-.para {
+/* .para {
   font-size: 22px;
-}
+} */
 
-.confirm {
+/* .confirm {
   background: green;
   color: white;
   font-weight: bold;
-} 
+} */
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,7 +33,19 @@ body {
   font-size: 20px;
 }
 
-.child {
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+}
+
+.text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
+}
+
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
